// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`picker选择器 城市选择 1`] = `
<body>
  <div
    class="adm-px-tester"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="picker-children"
    >
      <div />
    </div>
  </div>
  <div
    class="adm-popup adm-picker-popup"
    style="display: none;"
  >
    <div
      class="adm-mask"
      style="background: rgba(0, 0, 0, 0.55); opacity: 0; display: none;"
    >
      <div
        aria-label="遮罩层"
        class="adm-mask-aria-button"
        role="button"
      />
      <div
        class="adm-mask-content"
      />
    </div>
    <div
      class="adm-popup-body adm-popup-body-position-bottom"
      style="transform: translate(0, 100%);"
    >
      <div
        class="adm-picker"
      >
        <div
          class="adm-picker-header"
        >
          <a
            class="adm-picker-header-button"
          >
            取消
          </a>
          <div
            class="adm-picker-header-title"
          >
            选择
          </div>
          <a
            class="adm-picker-header-button"
          >
            确定
          </a>
        </div>
        <div
          class="adm-picker-body"
        >
          <div
            class="adm-picker-view"
          >
            <div
              class="adm-picker-view-column"
            >
              <div
                aria-hidden="true"
                class="adm-picker-view-column-wheel"
                style="transform: none;"
              />
            </div>
            <div
              class="adm-picker-view-mask"
            >
              <div
                class="adm-picker-view-mask-top"
              />
              <div
                class="adm-picker-view-mask-middle"
              />
              <div
                class="adm-picker-view-mask-bottom"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="adm-safe-area adm-safe-area-position-bottom"
      />
    </div>
  </div>
</body>
`;

exports[`picker选择器 渲染 1`] = `
<body>
  <div
    class="adm-px-tester"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="picker-children"
    >
      显示
    </div>
  </div>
  <div
    class="adm-popup adm-picker-popup"
    style="display: none;"
  >
    <div
      class="adm-mask"
      style="background: rgba(0, 0, 0, 0.55); opacity: 0; display: none;"
    >
      <div
        aria-label="遮罩层"
        class="adm-mask-aria-button"
        role="button"
      />
      <div
        class="adm-mask-content"
      />
    </div>
    <div
      class="adm-popup-body adm-popup-body-position-bottom"
      style="transform: translate(0, 100%);"
    >
      <div
        class="adm-picker"
      >
        <div
          class="adm-picker-header"
        >
          <a
            class="adm-picker-header-button"
          >
            取消
          </a>
          <div
            class="adm-picker-header-title"
          >
            选择
          </div>
          <a
            class="adm-picker-header-button"
          >
            确定
          </a>
        </div>
        <div
          class="adm-picker-body"
        >
          <div
            class="adm-picker-view"
          >
            <div
              class="adm-picker-view-column"
            >
              <div
                aria-hidden="true"
                class="adm-picker-view-column-wheel"
                style="transform: none;"
              />
            </div>
            <div
              class="adm-picker-view-mask"
            >
              <div
                class="adm-picker-view-mask-top"
              />
              <div
                class="adm-picker-view-mask-middle"
              />
              <div
                class="adm-picker-view-mask-bottom"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="adm-safe-area adm-safe-area-position-bottom"
      />
    </div>
  </div>
</body>
`;
